--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ build-backend = "flit.buildapi"
 module = "prybar"
 author = "Hal Blackburn"
 author-email = "hwtb2@cam.ac.uk"
-classifiers = ["License :: OSI Approved :: MIT License"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3 :: Only"
+]
+requires-python = "~=3.6"
 
 [tool.flit.metadata.requires-extra]
 dev = [
