--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only"
 ]
 requires-python = "~=3.6"
+description-file = "README.rst"
 
 [tool.flit.metadata.requires-extra]
 dev = [
