Add travis CI config

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,6 @@ indent_style = space
 # Don't corrupt git patch edit files
 [.git/**/*.diff]
 trim_trailing_whitespace = none
+
+[*.yml]
+indent_size = 2
