--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ classifiers = [
 requires-python = "~=3.6"
 description-file = "README.rst"
 
+[tool.flit.metadata.urls]
+Documentation = "https://prybar.readthedocs.io/en/latest/"
+
 [tool.flit.metadata.requires-extra]
 dev = [
     "flake8",
