--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = "~=3.6"
 description-file = "README.rst"
 
 [tool.flit.metadata.urls]
-Documentation = "https://prybar.readthedocs.io/en/latest/"
+Documentation = "https://prybar.readthedocs.io"
 
 [tool.flit.metadata.requires-extra]
 dev = [
